fix(web): disable selection while scrolling custom scrollbar

--- a/actor-sdk/sdk-web/src/styles/components/common/_scroller.scss
+++ b/actor-sdk/sdk-web/src/styles/components/common/_scroller.scss
@@ -25,6 +25,10 @@
   }
 }
 
+.scroller__active {
+  user-select: none;
+}
+
 .scroller__wrapper--custom {
   .scroller__container {
     &::-webkit-scrollbar {
